--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.6",
     "pg": "^8.5.0"
   },
   "devDependencies": {},
